# delphi-formatter

./: .gitignore  LICENSE  README.md  delphi-formatter.json  pyproject.toml
examples/: demo_match.json  demo_match.pas  input_sample.pas
src/delphi_formatter/: __init__.py  cli.py  config.py  dfm.py  formatter.py  keywords.py  runner.py  tokenizer.py  wizard.py
src/delphi_formatter/rules/: __init__.py  alignment.py  identifier_prefix.py  keyword_case.py  spacing.py  whitespace.py
tests/: test_cli.py  test_config.py  test_dfm.py  test_end_to_end.py  test_form_safety.py  test_identifier_prefix.py  test_keyword_case.py  test_runner.py  test_spacing_and_alignment.py  test_tokenizer.py  test_wizard.py
