[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "delphi-formatter"
version = "0.1.0"
description = "Configurable formatter for Delphi / Object Pascal source code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Filippo Valmaggi" }]
keywords = ["delphi", "pascal", "formatter", "code-style"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Code Generators",
]

[project.scripts]
delphi-formatter = "delphi_formatter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
